[tests] open modules in forked process if java is 17+